<resources>
    <string name="app_name">OnChat-android</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fast_simple_and_secure_messaging">Fast, Simple and Secure Messaging.</string>
    <string name="o_n_chat">O-N Chat</string>
    <string name="loginPage">Login</string>
    <string name="signupPage">SignUp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back_to_login">back to Login</string>
    <string name="BaseUrl">http://10.0.2.2:7242/api/</string>
    <string name="enter_message">Enter Message</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>

</resources>